overflow-x fixed

--- a/css/screencss.css
+++ b/css/screencss.css
@@ -1,8 +1,8 @@
 html{
   overflow-x: hidden;
   height: 100%;
-  -webkit-overflow-scrolling: touch;
 }
+
 /* About me section - responsive */
 @media only screen and (max-width:1100px){
     div.profile_div_container {
